fixed footer spacing

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -12,6 +12,7 @@
   grid-gap: 20px 17px;
   padding: 0;
   margin-top: 30px;
+  margin-bottom: 0;
 }
 
 .card__image {
