--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -17,7 +17,7 @@
     width: 282px;
     font-size: 14px;
     line-height: 17px;
-    padding: 36px 19px;
+    padding: 48px 19px 36px;
   }
 
   .footer {
